--- a/style.css
+++ b/style.css
@@ -1,5 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Overpass:wght@400;700&display=swap');
 
+@media (max-width: 375px) {
+  main {
+    width: 100%;
+    height: auto; 
+  }
+
+  .title {
+    font-size: 24px;
+  }
+
+  .description {
+    font-size: 12px;
+    line-height: 1.4;
+  }
+
+  .rating-point-circles {
+    justify-content: center;
+  }
+
+  .rating-point-circle {
+    padding: 8px;
+  }
+
+  #sumbit-button {
+    padding: 10px 0;
+  }
+
+  .chosen-rating-container {
+    font-size: 12px;
+    padding: 8px;
+  }
+
+  .thank-you-section > .description {
+    margin: 16px;
+  }
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
 :root {
     --clr-orange: hsl(25, 97%, 53%);
     --clr-white: hsl(0, 0%, 100%);
